# ChangeLog for app-text/gnome-doc-utils
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/ChangeLog,v 1.36 2005/10/10 08:10:39 hardave Exp $

  10 Oct 2005; Hardave Riar <hardave@gentoo.org>
  gnome-doc-utils-0.2.1.ebuild:
  Keyworded ~mips.

*gnome-doc-utils-0.4.2 (02 Oct 2005)

  02 Oct 2005; Leonardo Boshell <leonardop@gentoo.org>
  -gnome-doc-utils-0.4.1.ebuild, +gnome-doc-utils-0.4.2.ebuild:
  New version.

  09 Sep 2005; Aron Griffis <agriffis@gentoo.org>
  gnome-doc-utils-0.2.1.ebuild:
  Mark 0.2.1 stable on alpha

*gnome-doc-utils-0.4.1 (09 Sep 2005)

  09 Sep 2005; John N. Laliberte <allanonjl@gentoo.org>
  -gnome-doc-utils-0.3.3.ebuild, +gnome-doc-utils-0.4.1.ebuild:
  2.12 release vbump

*gnome-doc-utils-0.3.3 (04 Sep 2005)

  04 Sep 2005; Leonardo Boshell <leonardop@gentoo.org>
  -gnome-doc-utils-0.3.2.ebuild, +gnome-doc-utils-0.3.3.ebuild:
  New version.

  03 Sep 2005; Markus Rothe <corsair@gentoo.org>
  gnome-doc-utils-0.2.1.ebuild:
  Stable on ppc64

  02 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  gnome-doc-utils-0.2.1.ebuild:
  Stable on ppc.

  27 Aug 2005; Guy Martin <gmsoft@gentoo.org> gnome-doc-utils-0.2.1.ebuild:
  Stable on hppa.

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  gnome-doc-utils-0.2.1.ebuild:
  stable on ia64

  24 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-doc-utils-0.2.1.ebuild:
  Stable on sparc

  23 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  gnome-doc-utils-0.2.1.ebuild:
  Stable on x86.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  gnome-doc-utils-0.2.0.ebuild:
  stable on ia64

  23 Aug 2005; Luis Medinas <metalgod@gentoo.org>
  gnome-doc-utils-0.2.0.ebuild:
  Marked Stable on AMD64.

*gnome-doc-utils-0.3.2 (18 Aug 2005)

  18 Aug 2005; John N. Laliberte <allanonjl@gentoo.org>
  +gnome-doc-utils-0.3.2.ebuild:
  new version, get rid of omf fix, adding missing gnome2_pkg_post{inst,rm},