@@ -1,8 +1,8 @@
 MD5 973a748121f778a570dec3832a7b4f87 gnome-doc-utils-0.1.3.ebuild 840
 MD5 02f5e274f015ac61bb605b5040320a1b gnome-doc-utils-0.2.1.ebuild 1005
-MD5 be7de278e71f13b922163fb59ea3cec6 gnome-doc-utils-0.4.2.ebuild 936
+MD5 c59e0d890c248cca6b8ef188833b83df gnome-doc-utils-0.4.2.ebuild 1101
 MD5 5956ffcd46070f7d276c02cca269f341 gnome-doc-utils-0.2.0.ebuild 991
-MD5 0686f7a61841078ade4d8d4666078a77 ChangeLog 4608
+MD5 5b00041dd195477bc19d3d52738a8811 ChangeLog 4730
 MD5 77c7e3f56ca32c24f88a64c3680c8485 metadata.xml 183
 MD5 187390057c80dbdb9582ea4ce9332100 files/digest-gnome-doc-utils-0.1.3 74
 MD5 0f3180719f9bd2a7bf8484fd7735eb86 files/digest-gnome-doc-utils-0.2.0 74
