@@ -1,8 +1,8 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/Attic/gnome-doc-utils-0.4.2.ebuild,v 1.2 2005/10/11 00:06:00 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnome-doc-utils/Attic/gnome-doc-utils-0.4.2.ebuild,v 1.3 2005/10/11 13:07:59 allanonjl Exp $
 
-inherit python gnome2
+inherit python gnome2 eutils
 
 DESCRIPTION="A collection of documentation utilities for the Gnome project"
 HOMEPAGE="http://www.gnome.org/"
@@ -27,6 +27,11 @@ USE_DESTDIR="1"
 
 pkg_setup() {
 	G2CONF="--disable-scrollkeeper"
+
+	if ! built_with_use dev-libs/libxml2 python; then
+		einfo "Please re-emerge libxml2 with the python use flag set"
+		die "libxml2 needs python use flag"
+	fi
 }
 
 pkg_postinst() {
